Worksflows are running on self-hosted machines
Signed-off-by: Pavel Abramov <uncle.decart@gmail.com>

--- a/.github/workflows/eden_setup.yml
+++ b/.github/workflows/eden_setup.yml
@@ -6,7 +6,7 @@ on:  # yamllint disable-line rule:truthy
 
 jobs:
   integration:
-    runs-on: ubuntu-22.04
+    runs-on: self-hosted
     steps:
       - name: setup
         run: |
