--- a/.github/workflows/eden_gcp.yml
+++ b/.github/workflows/eden_gcp.yml
@@ -6,7 +6,7 @@ on:  # yamllint disable-line rule:truthy
 # yamllint disable rule:line-length
 jobs:
   check-secrets:
-    runs-on: ubuntu-22.04
+    runs-on: self-hosted
     outputs:
       available: ${{ steps.secrets.outputs.defined }}
     steps:
@@ -19,7 +19,7 @@ jobs:
           GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
   integration:
     name: Integration GCP test (${{ matrix.hv }};${{ matrix.fs }})
-    runs-on: ubuntu-22.04
+    runs-on: self-hosted
     needs: [check-secrets]
     if: needs.check-secrets.outputs.available == 'true'
     strategy:
