--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -1,4 +1,4 @@
----
+u--
 name: Static validation
 on:  # yamllint disable-line rule:truthy
   pull_request:
@@ -6,7 +6,7 @@ on:  # yamllint disable-line rule:truthy
 
 jobs:
   validation:
-    runs-on: ubuntu-22.04
+    runs-on: self-hosted
     steps:
       - name: Checkout
         uses: actions/checkout@v3
