Run eden on buildjet temprorarly
Signed-off-by: Pavel Abramov <uncle.decart@gmail.com>

--- a/.github/workflows/eden.yml
+++ b/.github/workflows/eden.yml
@@ -7,7 +7,7 @@ on:  # yamllint disable-line rule:truthy
 jobs:
   integration:
     name: Integration test (tpm=${{ matrix.tpm }};${{ matrix.fs }})
-    runs-on: ubuntu-22.04
+    runs-on: buildjet-4vcpu-ubuntu-2204
     strategy:
       fail-fast: false
       matrix:
