--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,9 @@
 ---
 name: Test
 
-on: workflow_dispatch
+on:  # yamllint disable-line rule:truthy
+  pull_request:
+    branches: [master]
 
 jobs:
   smoke: 
@@ -11,7 +13,7 @@ jobs:
         file_system: ['ext4', 'zfs']
         tpm: [true, false]
     name: Smoke tests
-    runs-on: ubuntu-22.04
+    runs-on: self-hosted
     steps:
       - name: Get code
         uses: actions/checkout@v3
@@ -25,7 +27,7 @@ jobs:
   networking: 
     name: Networking test suite
     needs: smoke
-    runs-on: ubuntu-22.04
+    runs-on: self-hosted
     steps:
       - name: Get code
         uses: actions/checkout@v3
@@ -43,7 +45,7 @@ jobs:
         file_system: ['ext4', 'zfs']
     name: Storage test suite
     needs: smoke
-    runs-on: ubuntu-22.04
+    runs-on: self-hosted
     steps:
       - name: Get code
         uses: actions/checkout@v3
@@ -57,7 +59,7 @@ jobs:
   lpc-loc:
     name: LPC LOC test suite
     needs: smoke
-    runs-on: ubuntu-22.04
+    runs-on: self-hosted
     steps:
       - name: Get code
         uses: actions/checkout@v3
@@ -75,7 +77,7 @@ jobs:
         file_system: ['ext4', 'zfs']
     name: EVE upgrade test suite
     needs: smoke
-    runs-on: ubuntu-22.04
+    runs-on: self-hosted
     steps:
       - name: Get code
         uses: actions/checkout@v3
@@ -89,7 +91,7 @@ jobs:
   user-apps:
     name: User apps test suite
     needs: smoke
-    runs-on: ubuntu-22.04
+    runs-on: self-hosted
     steps:
       - name: Get code
         uses: actions/checkout@v3
