--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,11 +46,11 @@ jobs:
       - id: fork-check
         run: |
           if [[ "${{ github.event.repository.full_name}}" == "lf-edge/eve" ]] || [[ "${{ github.event.repository.full_name}}" == "lf-edge/eden" ]]; then
-            echo "runner=['buildjet-4vcpu-ubuntu-2204', 'buildjet-pinned-7950x']" >> "$GITHUB_OUTPUT"
-            echo "runner_virt=['buildjet-4vcpu-ubuntu-2204', 'buildjet-pinned-7950x']" >> "$GITHUB_OUTPUT"
+            echo "runner=['ubuntu-latest', 'self-hosted']" >> "$GITHUB_OUTPUT"
+            echo "runner_virt=['ubuntu-latest', 'self-hosted']" >> "$GITHUB_OUTPUT"
           else
-            echo "runner=['ubuntu-22.04']" >> "$GITHUB_OUTPUT"
-            echo "runner_virt=['ubuntu-22.04']" >> "$GITHUB_OUTPUT"
+            echo "runner=['ubuntu-latest', 'self-hosted']" >> "$GITHUB_OUTPUT"
+            echo "runner_virt=['ubuntu-latest', 'self-hosted']" >> "$GITHUB_OUTPUT"
           fi
 
   smoke:
@@ -70,6 +70,12 @@ jobs:
           repository: "lf-edge/eden"
           ref: ${{ inputs.eden_version }}
           path: "./eden"
+      - name: Check current user
+        run: |
+          whoami
+          id
+          pwd
+          ls -ld .
       - name: Run Smoke tests
         uses: ./eden/.github/actions/run-eden-test
         with:
