--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -294,7 +294,7 @@ jobs:
     runs-on: ${{ fromJSON(needs.determine-runner.outputs.runner) }}
     steps:
       - name: Dockerhub Login
-        if: ${{ github.event.repository.full_name }} == 'lf-edge/eve'
+        if: ${{ secrets.DOCKERHUB_PULL_USER && secrets.DOCKERHUB_PULL_TOKEN }}
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_PULL_USER }}
