--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -64,8 +64,16 @@ jobs:
     needs: determine-runner
     runs-on: ${{ fromJSON(needs.determine-runner.outputs.runner) }}
     steps:
-      - name: Dockerhub Login
-        if: ${{ github.event.repository.full_name }} == 'lf-edge/eve'
+      - name: Check for DockerHub credentials
+        id: check-dockerhub-creds
+        run: |
+          if [ -n "${{ secrets.DOCKERHUB_PULL_USER }}" ] && [ -n "${{ secrets.DOCKERHUB_PULL_TOKEN }}" ]; then
+            echo "creds_exist=true" >> $GITHUB_OUTPUT
+          else
+            echo "creds_exist=false" >> $GITHUB_OUTPUT
+          fi
+      - name: Login to DockerHub
+        if: steps.check-dockerhub-creds.outputs.creds_exist == 'true'
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_PULL_USER }}
@@ -97,8 +105,16 @@ jobs:
     needs: [determine-runner]
     runs-on: ${{ fromJSON(needs.determine-runner.outputs.runner) }}
     steps:
-      - name: Dockerhub Login
-        if: ${{ github.event.repository.full_name }} == 'lf-edge/eve'
+      - name: Check for DockerHub credentials
+        id: check-dockerhub-creds
+        run: |
+          if [ -n "${{ secrets.DOCKERHUB_PULL_USER }}" ] && [ -n "${{ secrets.DOCKERHUB_PULL_TOKEN }}" ]; then
+            echo "creds_exist=true" >> $GITHUB_OUTPUT
+          else
+            echo "creds_exist=false" >> $GITHUB_OUTPUT
+          fi
+      - name: Login to DockerHub
+        if: steps.check-dockerhub-creds.outputs.creds_exist == 'true'
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_PULL_USER }}
@@ -131,8 +147,16 @@ jobs:
     needs: [determine-runner]
     runs-on: ${{ fromJSON(needs.determine-runner.outputs.runner) }}
     steps:
-      - name: Dockerhub Login
-        if: ${{ github.event.repository.full_name }} == 'lf-edge/eve'
+      - name: Check for DockerHub credentials
+        id: check-dockerhub-creds
+        run: |
+          if [ -n "${{ secrets.DOCKERHUB_PULL_USER }}" ] && [ -n "${{ secrets.DOCKERHUB_PULL_TOKEN }}" ]; then
+            echo "creds_exist=true" >> $GITHUB_OUTPUT
+          else
+            echo "creds_exist=false" >> $GITHUB_OUTPUT
+          fi
+      - name: Login to DockerHub
+        if: steps.check-dockerhub-creds.outputs.creds_exist == 'true'
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_PULL_USER }}
@@ -161,8 +185,16 @@ jobs:
     needs: [determine-runner]
     runs-on: ${{ fromJSON(needs.determine-runner.outputs.runner) }}
     steps:
-      - name: Dockerhub Login
-        if: ${{ github.event.repository.full_name }} == 'lf-edge/eve'
+      - name: Check for DockerHub credentials
+        id: check-dockerhub-creds
+        run: |
+          if [ -n "${{ secrets.DOCKERHUB_PULL_USER }}" ] && [ -n "${{ secrets.DOCKERHUB_PULL_TOKEN }}" ]; then
+            echo "creds_exist=true" >> $GITHUB_OUTPUT
+          else
+            echo "creds_exist=false" >> $GITHUB_OUTPUT
+          fi
+      - name: Login to DockerHub
+        if: steps.check-dockerhub-creds.outputs.creds_exist == 'true'
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_PULL_USER }}
@@ -195,8 +227,16 @@ jobs:
     needs: [determine-runner]
     runs-on: ${{ fromJSON(needs.determine-runner.outputs.runner) }}
     steps:
-      - name: Dockerhub Login
-        if: ${{ github.event.repository.full_name }} == 'lf-edge/eve'
+      - name: Check for DockerHub credentials
+        id: check-dockerhub-creds
+        run: |
+          if [ -n "${{ secrets.DOCKERHUB_PULL_USER }}" ] && [ -n "${{ secrets.DOCKERHUB_PULL_TOKEN }}" ]; then
+            echo "creds_exist=true" >> $GITHUB_OUTPUT
+          else
+            echo "creds_exist=false" >> $GITHUB_OUTPUT
+          fi
+      - name: Login to DockerHub
+        if: steps.check-dockerhub-creds.outputs.creds_exist == 'true'
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_PULL_USER }}
@@ -225,8 +265,16 @@ jobs:
     needs: [determine-runner]
     runs-on: ${{ fromJSON(needs.determine-runner.outputs.runner) }}
     steps:
-      - name: Dockerhub Login
-        if: ${{ github.event.repository.full_name }} == 'lf-edge/eve'
+      - name: Check for DockerHub credentials
+        id: check-dockerhub-creds
+        run: |
+          if [ -n "${{ secrets.DOCKERHUB_PULL_USER }}" ] && [ -n "${{ secrets.DOCKERHUB_PULL_TOKEN }}" ]; then
+            echo "creds_exist=true" >> $GITHUB_OUTPUT
+          else
+            echo "creds_exist=false" >> $GITHUB_OUTPUT
+          fi
+      - name: Login to DockerHub
+        if: steps.check-dockerhub-creds.outputs.creds_exist == 'true'
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_PULL_USER }}
@@ -255,8 +303,16 @@ jobs:
     needs: [determine-runner]
     runs-on: ${{ fromJSON(needs.determine-runner.outputs.runner_virt) }}
     steps:
-      - name: Dockerhub Login
-        if: ${{ github.event.repository.full_name }} == 'lf-edge/eve'
+      - name: Check for DockerHub credentials
+        id: check-dockerhub-creds
+        run: |
+          if [ -n "${{ secrets.DOCKERHUB_PULL_USER }}" ] && [ -n "${{ secrets.DOCKERHUB_PULL_TOKEN }}" ]; then
+            echo "creds_exist=true" >> $GITHUB_OUTPUT
+          else
+            echo "creds_exist=false" >> $GITHUB_OUTPUT
+          fi
+      - name: Login to DockerHub
+        if: steps.check-dockerhub-creds.outputs.creds_exist == 'true'
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_PULL_USER }}
@@ -293,8 +349,16 @@ jobs:
     needs: [determine-runner]
     runs-on: ${{ fromJSON(needs.determine-runner.outputs.runner) }}
     steps:
-      - name: Dockerhub Login
-        if: ${{ github.event.repository.full_name }} == 'lf-edge/eve'
+      - name: Check for DockerHub credentials
+        id: check-dockerhub-creds
+        run: |
+          if [ -n "${{ secrets.DOCKERHUB_PULL_USER }}" ] && [ -n "${{ secrets.DOCKERHUB_PULL_TOKEN }}" ]; then
+            echo "creds_exist=true" >> $GITHUB_OUTPUT
+          else
+            echo "creds_exist=false" >> $GITHUB_OUTPUT
+          fi
+      - name: Login to DockerHub
+        if: steps.check-dockerhub-creds.outputs.creds_exist == 'true'
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_PULL_USER }}
